# paskia

./: .gitignore  API.md  AuthFlow.md  CADDY.md  Caddy.md  Caddyfile  Headers.md  README.md  authsession.py  dev.py  main.py  oidc.md  pyproject.toml
caddy/: Caddyfile
caddy/auth/: all  require  setup
docs/: API.md  Caddy.md  Headers.md  Integration.md
e2e/: README.md  package-lock.json  package.json  playwright.config.js  playwright.config.ts  tsconfig.json
e2e/tests/: 10-passkey.spec.ts  20-api-auth.spec.ts  global-setup.ts  global-teardown.ts  passkey.spec.ts
e2e/tests/fixtures/: passkey-helpers.ts  virtual-authenticator.ts
examples/: index.html  restricted-api.html  style.css
frontend/: bun.lockb  index.html  package.json  vite-plugin-fastapi.js  vite.config.js
frontend/admin/: index.html
frontend/auth/: App.vue  index.html  main.js
frontend/auth/admin/: AdminApp.vue  index.html  main.js
frontend/auth/restricted/: RestrictedApi.vue  index.html  main.js  theme.js
frontend/host/: index.html
frontend/int/forward/: index.html  main.js
frontend/int/host/: index.html
frontend/int/reset/: ResetApp.vue  index.html  main.js
frontend/reset/: index.html
frontend/restricted/: index.html
frontend/restricted-api/: index.html
frontend/restricted/api/: index.html
frontend/restricted/forward/: index.html
frontend/src/: App.vue
frontend/src/admin/: AdminApp.vue  AdminDialogs.vue  AdminOidcDetail.vue  AdminOrgDetail.vue  AdminOverview.vue  AdminUserDetail.vue  main.js
frontend/src/assets/: style.css
frontend/src/components/: AccessDenied.vue  AddCredentialView.vue  AddDeviceCredentialView.vue  AuthRequiredMessage.vue  Breadcrumbs.vue  CredentialList.vue  DeviceLinkView.vue  HostProfileView.vue  LoadingView.vue  LoginView.vue  Modal.vue  NameEditForm.vue  PermissionDeniedView.vue  ProfileView.vue  QRCodeDisplay.vue  RegisterView.vue  RegistrationLinkModal.vue  RemoteAuthPermit.vue  RemoteAuthRequest.vue  ResetView.vue  RestrictedAuth.vue  SessionList.vue  StatusMessage.vue  ThemeSelector.vue  UserBasicInfo.vue
frontend/src/host/: HostApp.vue  main.js
frontend/src/paskia/: fetch.js  overlay.js  validate.js
frontend/src/reset/: ResetApp.vue
frontend/src/restricted/: RestrictedApp.vue  main.js
frontend/src/restricted-api/: RestrictedApiApp.vue  main.js
frontend/src/stores/: auth.js
frontend/src/utils/: api.js  awaitable-websocket.js  base64url.js  helpers.js  passkey.js  session.js  theme.js
paskia/: __main__.py  authcode.py  authsession.py  bootstrap.py  config.py  globals.py  oidc_notify.py  remoteauth.py  sansio.py
paskia-js/: README.md  package.json  tsconfig.json  vite.config.js
paskia-js/src/: fetch.ts  index.ts  overlay.ts  settings.ts  validate.ts
paskia/aaguid/: __init__.py
paskia/db/: __init__.py  background.py  bootstrap.py  filelock.py  json.py  jsonl.py  lifecycle.py  logging.py  migrations.py  operations.py  snapshot.py  sql.py  structs.py
paskia/fastapi/: __main__.py  admin.py  api.py  auth_host.py  authz.py  front.py  logging.py  mainapp.py  oid.py  remote.py  reset.py  session.py  user.py  ws.py  wschat.py  wsutil.py
paskia/fastapi/admin/: __init__.py  adminapp.py  errors.py  oidc_clients.py  orgs.py  permissions.py  (+3 more)
paskia/migrate/: __init__.py  sql.py
paskia/util/: apistructs.py  crypto.py  frontend.py  hostutil.py  htmlutil.py  nameutil.py  oidjwt.py  passphrase.py  permutil.py  runtime.py  sessionutil.py  startupbox.py  tokens.py  useragent.py  userinfo.py  vitedev.py
passkey/: __init__.py  authsession.py  bootstrap.py  globals.py  sansio.py
passkey/aaguid/: __init__.py
passkey/db/: __init__.py  sql.py
passkey/fastapi/: __init__.py  __main__.py  admin.py  api.py  api_handlers.py  auth_host.py  authz.py  main.py  mainapp.py  reset.py  reset_handlers.py  session.py  session_manager.py  user.py  ws.py  ws_handlers.py
passkey/util/: frontend.py  hostutil.py  jwt.py  passphrase.py  permutil.py  querysafe.py  session.py  sessionutil.py  tokens.py  userinfo.py
passkeyauth/: TODO.txt  __init__.py  aaguid_manager.py  api_handlers.py  db.py  jwt_manager.py  main.py  passkey.py  passphrase.py  reset_handlers.py  session_manager.py
scripts/: bootstrap.py  build-frontend.py  dev.py  devserver.new.py  devserver.py
scripts/fastapi-vue/: buildutil.py  devutil.py
static/: add-device.html  app.js  awaitable-websocket.js  dashboard.html  index.html  login.html  login.js  profile-dialog.css  profile.html  profile.js  register.html  register.js  reset.html  style.css  util.js
tests/: conftest.py  test_admin.py  test_api.py  test_user.py
(+19 files in other folders)
