[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "paskia"
dynamic = ["version"]
description = "Passkey Auth made easy: all sites and APIs can be guarded even without any changes on the protected site."
keywords = [ "forward_auth", "auth_request", "FastAPI" ]
authors = [
    {name = "Leo Vasanko"},
]
dependencies = [
    "fastapi[standard]>=0.104.1",
    "websockets>=12.0",
    "webauthn>=1.11.1",
    "base64url>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "uuid7-standard>=1.0.0",
    "pyjwt>=2.8.0",
    "user-agents>=2.2.0",
]
requires-python = ">=3.10"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "paskia/_version.py"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "coverage[toml]>=7.0.0",
]

[tool.coverage.run]
source = ["paskia"]
branch = true
parallel = true
sigterm = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.coverage.html]
directory = "coverage-html"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long
isort.known-first-party = ["paskia"]

[project.scripts]
paskia = "paskia.fastapi.__main__:main"

[tool.hatch.build]
artifacts = ["paskia/frontend-build"]
targets.sdist.hooks.custom.path = "scripts/build-frontend.py"
